

namespace LogicaDeNegocio.EntidadesDeNegocio
{
    public enum MetodoDePago
    {
        Credito,
        Efectivo,
    }
}
