
using LogicaDeNegocio.EntidadesDeNegocio;

namespace LogicaDeNegocio.InterfacesDeRepositorio
{
    public interface IRepositorioEquipo : IRepositorio<Equipo>
    {
    }
}
