using LogicaDeNegocio.EntidadesDeNegocio;

namespace LogicaDeNegocio.InterfacesDeRepositorio
{
    public interface IRepositorioRol: IRepositorio<Rol>
    {
    }
}
