

namespace LogicaDeNegocio.InterfacesEntidades
{
    public interface IValidable
    {
        void Validar();
    }
}
